--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Logbook==1.1.0
 pymongo==3.6.0
 python-dateutil==2.6.1
 python-slugify==1.2.4
+raven==6.5.0
 requests==2.18.4
 six==1.11.0
 Unidecode==1.0.22
